<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/material_dynamic_primary60"
        android:gravity="center"
        android:text="TableLayout and RelativeLayout"
        android:textSize="24sp"
        android:textColor="@android:color/white" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="16dp"
        android:stretchColumns="*"
        android:layout_margin="10dp"
        android:padding="10dp">

        <TableRow
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/Name" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/Address" />


        </TableRow>

        <TableRow
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/HintName"
                android:layout_span="2"
                android:minHeight="48dp"/>

        </TableRow>

        <TableRow>

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:layout_span="2"
                android:hint="@string/HintAddress"
                android:minHeight="48dp"/>

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="80dp"
        android:text="@string/Clear" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="250dp"
        android:text="@string/Submit" />

</RelativeLayout>
